# rust_deseq2

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  stats.rs
src/cli/: mod.rs
src/data/: builder.rs  collapse.rs  count_matrix.rs  dataset.rs  metadata.rs  mod.rs
src/dispersion/: gene_wise.rs  map.rs  mod.rs  trend.rs
src/filter/: cooks.rs  independent.rs  mod.rs
src/glm/: design.rs  fitting.rs  mod.rs  negative_binomial.rs
src/io/: csv.rs  mod.rs  results.rs
src/normalization/: counts.rs  mod.rs  size_factors.rs
src/rng/: mod.rs
src/shrinkage/: apeglm.rs  ashr.rs  mod.rs  normal.rs
src/testing/: fdr.rs  lrt.rs  mod.rs  pvalue.rs  wald.rs
src/transform/: mod.rs  rlog.rs  vst.rs
