[package]
name = "rust_deseq2"
version = "0.1.0"
edition = "2021"
authors = ["Sunju Kim"]
description = "A pure Rust implementation of DESeq2 for differential expression analysis of RNA-seq data"
license = "MIT"
repository = "https://github.com/necoli1822/rust_deseq2"
homepage = "https://github.com/necoli1822/rust_deseq2"
keywords = ["bioinformatics", "rna-seq", "deseq2", "genomics"]
categories = ["science", "command-line-utilities"]
rust-version = "1.70"
exclude = [
    "validation/",
    "reference/",
    "deseq2_source/",
    "DESeq2/",
    "test_data/",
    "scripts/",
    ".omc/",
    "python/",
]

[lib]
name = "rust_deseq2"
path = "src/lib.rs"

[[bin]]
name = "rust_deseq2"
path = "src/main.rs"

[dependencies]
# Array/matrix operations
ndarray = { version = "0.16", features = ["rayon"] }
ndarray-stats = "0.6"

# Statistics
statrs = "0.18"
rand = "0.8"
rand_distr = "0.4"

# Note: Custom optimization implemented, argmin not needed for now

# Parallel processing
rayon = "1.10"

# Data I/O
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Numerical
num-traits = "0.2"
approx = "0.5"

[dev-dependencies]
tempfile = "3.24"
